--- a/src/static/index.html
+++ b/src/static/index.html
@@ -8,5 +8,16 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script>
+      window.addEventListener('touchmove', (ev) => { ev.preventDefault(); }, { passive: false });
+
+      window.addEventListener('resize', () => {
+        document.body.style.height = window.innerHeight + 'px';
+        setTimeout(() => {
+          document.body.style.height = window.innerHeight + 'px';
+        }, 100);
+      });
+    </script>
   </body>
 </html>
