--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,22 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Bingo Gen</title>
   </head>
   <body>
     <div id="root"></div>
-
-    <script>
-      window.addEventListener('touchmove', (ev) => { ev.preventDefault(); }, { passive: false });
-
-      window.addEventListener('resize', () => {
-        document.body.style.height = window.innerHeight + 'px';
-        setTimeout(() => {
-          document.body.style.height = window.innerHeight + 'px';
-        }, 100);
-      });
-    </script>
   </body>
 </html>
